--- a/style.css
+++ b/style.css
@@ -8,7 +8,23 @@ body {
 .login-background {
     margin: 0;
     padding: 0;
-    /* overflow-y: hidden; */
-    overflow: hidden;
     height: 100vh;
+    overflow: hidden;
+}
+
+.login-background img {
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+}
+
+.background {
+    position: fixed;
+    z-index: 10;
+    background: rgba(248, 0, 0, 0.05);
+    height: 100%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backdrop-filter: blur(40px);
 }
