--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .img {
-    background: url(./img/login-background.png) no-repeat center center;
+    background: url(../img/login-background.png) no-repeat center center;
     min-height: 100vh;
     background-size: cover;
     position: fixed;
@@ -32,9 +32,6 @@ body {
 }
 
 .contaner {
-    /* width: 883px;
-    height: 899px;
-    position: absolute; */
     transform: translate(1%, -50%);
     right: 1%;
     top: 50%;
@@ -180,6 +177,19 @@ form .card,
     color: #fff;
 }
 
+.card-2 .blur,
+.card .blur {
+    position: relative;
+}
+
+.card-2 .blur span,
+.card .blur span {
+    position: absolute;
+    top: 17px;
+    right: 11px;
+    width: 30px;
+}
+
 a {
     text-decoration: none;
 }
@@ -212,6 +222,7 @@ hr {
     font-size: 17px;
     box-shadow: 0px 4px 12px -1px rgba(0, 0, 0, 0.25), inset 0px 0px 2px rgba(255, 255, 255, 0.25);
     padding-left: 20px;
+    padding-right: 48px;
     width: 350px;
     height: 63px;
 }
