--- a/css/style.css
+++ b/css/style.css
@@ -307,3 +307,11 @@ form input,
 .flatpickr-innerContainer {
     justify-content: space-evenly;
 }
+
+.otp_verification form p {
+    padding: 0;
+    margin: 0;
+    font-size: 24px;
+    line-height: 0px;
+    margin-bottom: 15px;
+}
