--- a/css/style.css
+++ b/css/style.css
@@ -100,15 +100,29 @@ body {
     height: 185px;
 }
 
+#errorLogin {
+    font-size: 20px;
+    color: red;
+    font-weight: bold;
+    margin: 0;
+    margin-top: 5px;
+}
+
 .circle-dob,
 .circle-otp {
     right: 0;
 }
 
-.circle-dob::before,
+.circle-dob::before {
+    /* right: 450px;
+    top: 440px; */
+    right: 379px;
+    top: 355px;
+}
+
 .circle-otp::before {
-    right: 375px;
-    top: 364px;
+    right: 452px;
+    top: 437px;
 }
 
 form {
@@ -177,7 +191,7 @@ form .card,
 }
 
 .card .formgroup:nth-of-type(5) {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -193,6 +207,10 @@ form .card,
     padding: 0;
     height: 63px;
     width: 187px;
+}
+
+input#btnsubmit {
+    margin-bottom: 20px;
 }
 
 .card .formgroup input:focus {
@@ -255,10 +273,14 @@ form input,
     height: 63px;
 }
 
-.dob,
-.otp_verification {
+.dob {
     width: 565px;
     height: 540px;
+}
+
+.otp_verification {
+    width: 635px;
+    height: 625px;
 }
 
 .dob form,
@@ -271,6 +293,11 @@ form input,
     transform: translate(-50%, -50%);
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+.otp_verification form {
+    width: 468px;
+    height: 468px;
 }
 
 .dob form img,
@@ -311,7 +338,12 @@ form input,
 .otp_verification form p {
     padding: 0;
     margin: 0;
-    font-size: 24px;
+    font-size: 21px;
     line-height: 0px;
-    margin-bottom: 15px;
+}
+
+.resend {
+    color: #fff;
+    text-decoration: underline;
+    font-size: 18px;
 }
